native/crates/immich_core_ffi/include/immich_core.h

#pragma once

// Generated by cbindgen — do not edit.

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Native core version as a NUL-terminated UTF-8 string.
 * Free the result with [`immich_core_free_string`].
 */
char *immich_core_version(void);

/**
 * Release a string returned by this library.
 *
 * # Safety
 * `ptr` must be a pointer previously returned by this library, or null.
 */
void immich_core_free_string(char *ptr);

/**
 * Whether the EXIF `orientation` swaps width and height (the 90/270/transpose
 * family) — callers use it to size and report the rotated output dims.
 */
bool immich_core_orientation_swaps_dims(int32_t orientation);

/**
 * Rotate an RGBA8888 image to the given EXIF `orientation`. `src` is `sh` rows of
 * `src_stride` bytes; `dst` is the caller's densely-packed `dw*dh*4` output (dims
 * swap for 90/270/transpose). Returns false (a safe no-op) on null pointers or
 * inconsistent sizes so the caller can fall back. The platform side owns the
 * bitmap lock + the dst allocation; this only fills dst.
 *
 * # Safety
 * `src` must be valid for reads of `src_len` bytes and `dst` for writes of `dst_len`.
 */
bool immich_core_rotate_rgba8888(const uint8_t *src,
                                 uintptr_t src_len,
                                 uintptr_t src_stride,
                                 uint32_t width,
                                 uint32_t height,
                                 int32_t orientation,
                                 uint8_t *dst,
                                 uintptr_t dst_len);

/**
 * Convert an RGBA_1010102 image (`src`, `sh` rows of `src_stride` bytes) to
 * RGBA8888 in the caller's densely-packed `w*h*4` `dst`, matching Skia's
 * `Bitmap.copy(ARGB_8888)`. Returns false (a safe no-op) on null pointers or
 * inconsistent sizes so the caller can fall back. The platform side owns the
 * bitmap lock + the dst allocation; this only fills dst.
 *
 * # Safety
 * `src` must be valid for reads of `src_len` bytes and `dst` for writes of `dst_len`.
 */
bool immich_core_rgba1010102_to_rgba8888(const uint8_t *src,
                                         uintptr_t src_len,
                                         uintptr_t src_stride,
                                         uint32_t width,
                                         uint32_t height,
                                         uint8_t *dst,
                                         uintptr_t dst_len);

/**
 * Placeholder size for a ThumbHash. Returns false (leaving the out params
 * untouched) if the hash is malformed.
 *
 * # Safety
 * `hash` must be valid for reads of `hash_len` bytes; `out_width`/`out_height`
 * must be valid for writes.
 */
bool immich_core_thumbhash_dims(const uint8_t *hash,
                                uintptr_t hash_len,
                                uint32_t *out_width,
                                uint32_t *out_height);

/**
 * Render a ThumbHash as RGBA8888 (not premultiplied) into the caller's
 * densely-packed `w*h*4` `dst`, sized via [`immich_core_thumbhash_dims`].
 * Returns false (a safe no-op) on a malformed hash or short buffer.
 *
 * # Safety
 * `hash` must be valid for reads of `hash_len` bytes and `dst` for writes of
 * `dst_len`.
 */
bool immich_core_thumbhash_to_rgba(const uint8_t *hash,
                                   uintptr_t hash_len,
                                   uint8_t *dst,
                                   uintptr_t dst_len);