native/immich_native_core/lib/src/ffi/bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:immich_native_core/src/ffi/bindings.g.dart')
library;

import 'dart:ffi' as ffi;

/// Native core version as a NUL-terminated UTF-8 string.
/// Free the result with [`immich_core_free_string`].
@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> immich_core_version();

/// Release a string returned by this library.
///
/// # Safety
/// `ptr` must be a pointer previously returned by this library, or null.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void immich_core_free_string(ffi.Pointer<ffi.Char> ptr);

/// Whether the EXIF `orientation` swaps width and height (the 90/270/transpose
/// family) — callers use it to size and report the rotated output dims.
@ffi.Native<ffi.Bool Function(ffi.Int32)>()
external bool immich_core_orientation_swaps_dims(int orientation);

/// Rotate an RGBA8888 image to the given EXIF `orientation`. `src` is `sh` rows of
/// `src_stride` bytes; `dst` is the caller's densely-packed `dw*dh*4` output (dims
/// swap for 90/270/transpose). Returns false (a safe no-op) on null pointers or
/// inconsistent sizes so the caller can fall back. The platform side owns the
/// bitmap lock + the dst allocation; this only fills dst.
///
/// # Safety
/// `src` must be valid for reads of `src_len` bytes and `dst` for writes of `dst_len`.
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
    ffi.UintPtr,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Int32,
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
  )
>()
external bool immich_core_rotate_rgba8888(
  ffi.Pointer<ffi.Uint8> src,
  int src_len,
  int src_stride,
  int width,
  int height,
  int orientation,
  ffi.Pointer<ffi.Uint8> dst,
  int dst_len,
);

/// Convert an RGBA_1010102 image (`src`, `sh` rows of `src_stride` bytes) to
/// RGBA8888 in the caller's densely-packed `w*h*4` `dst`, matching Skia's
/// `Bitmap.copy(ARGB_8888)`. Returns false (a safe no-op) on null pointers or
/// inconsistent sizes so the caller can fall back. The platform side owns the
/// bitmap lock + the dst allocation; this only fills dst.
///
/// # Safety
/// `src` must be valid for reads of `src_len` bytes and `dst` for writes of `dst_len`.
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
    ffi.UintPtr,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
  )
>()
external bool immich_core_rgba1010102_to_rgba8888(
  ffi.Pointer<ffi.Uint8> src,
  int src_len,
  int src_stride,
  int width,
  int height,
  ffi.Pointer<ffi.Uint8> dst,
  int dst_len,
);

/// Placeholder size for a ThumbHash. Returns false (leaving the out params
/// untouched) if the hash is malformed.
///
/// # Safety
/// `hash` must be valid for reads of `hash_len` bytes; `out_width`/`out_height`
/// must be valid for writes.
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Uint32>,
  )
>()
external bool immich_core_thumbhash_dims(
  ffi.Pointer<ffi.Uint8> hash,
  int hash_len,
  ffi.Pointer<ffi.Uint32> out_width,
  ffi.Pointer<ffi.Uint32> out_height,
);

/// Render a ThumbHash as RGBA8888 (not premultiplied) into the caller's
/// densely-packed `w*h*4` `dst`, sized via [`immich_core_thumbhash_dims`].
/// Returns false (a safe no-op) on a malformed hash or short buffer.
///
/// # Safety
/// `hash` must be valid for reads of `hash_len` bytes and `dst` for writes of
/// `dst_len`.
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
  )
>()
external bool immich_core_thumbhash_to_rgba(
  ffi.Pointer<ffi.Uint8> hash,
  int hash_len,
  ffi.Pointer<ffi.Uint8> dst,
  int dst_len,
);
